[SWOZO-11] fixed logging of exceptions, added new cases to exception converter, switched to runtime exceptions in custom exceptions